// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography > matches snapshot for asChild composition 1`] = `
<DocumentFragment>
  <a
    class="inner typography link alignLeft widthSmall colorDefault outer"
    href="/quiz/create"
  >
    Create your own quiz
  </a>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for body variant with semantic color 1`] = `
<DocumentFragment>
  <p
    class="typography body alignLeft widthMedium colorSuccess"
  >
    Saved successfully
  </p>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for extraLargeTitle variant 1`] = `
<DocumentFragment>
  <h1
    class="typography extraLargeTitle alignLeft widthMedium colorDefault"
  >
    Let’s play
  </h1>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for link variant 1`] = `
<DocumentFragment>
  <a
    class="typography link alignLeft widthFull colorDefault"
    href="/profile"
  >
    Profile
  </a>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for title variant 1`] = `
<DocumentFragment>
  <h1
    class="typography title alignLeft widthSmall colorDefault"
  >
    Leaderboard
  </h1>
</DocumentFragment>
`;
